#215 build is clean